// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`completion completion for scoped member references 1`] = `
Array [
  Method {
    "description": "Do magna consequat veniam minim proident eiusmod incididunt aute proident.",
    "location": Location {
      "range": Range {
        "end": 1583,
        "start": 1493,
      },
      "relativeUri": "case/global_symbols.php",
    },
    "modifier": SymbolModifier {
      "modifier": 32,
      "visibility": 1,
    },
    "name": TypeName {
      "name": "staticTestMethod",
    },
    "scope": TypeName {
      "name": "\\\\TestClass",
    },
  },
  Property {
    "description": "Lorem excepteur officia sit anim velit veniam enim.
",
    "location": Location {
      "range": Range {
        "end": 1266,
        "start": 1247,
      },
      "relativeUri": "case/global_symbols.php",
    },
    "modifier": SymbolModifier {
      "modifier": 32,
      "visibility": 1,
    },
    "name": "$staticTestProperty",
    "scope": TypeName {
      "name": "\\\\TestClass",
    },
  },
  ClassConstant {
    "location": Location {
      "range": Range {
        "end": 1120,
        "start": 1098,
      },
      "relativeUri": "case/global_symbols.php",
    },
    "name": TypeName {
      "name": "TEST_CLASS_CONST",
    },
    "scope": TypeName {
      "name": "\\\\TestClass",
    },
  },
]
`;

exports[`completion completion for scoped member references 2`] = `
Array [
  Property {
    "description": "Lorem excepteur officia sit anim velit veniam enim.
",
    "location": Location {
      "range": Range {
        "end": 1266,
        "start": 1247,
      },
      "relativeUri": "case/global_symbols.php",
    },
    "modifier": SymbolModifier {
      "modifier": 32,
      "visibility": 1,
    },
    "name": "$staticTestProperty",
    "scope": TypeName {
      "name": "\\\\TestClass",
    },
  },
]
`;

exports[`completion completion for scoped member references 3`] = `
Array [
  Method {
    "description": "Do magna consequat veniam minim proident eiusmod incididunt aute proident.",
    "location": Location {
      "range": Range {
        "end": 1583,
        "start": 1493,
      },
      "relativeUri": "case/global_symbols.php",
    },
    "modifier": SymbolModifier {
      "modifier": 32,
      "visibility": 1,
    },
    "name": TypeName {
      "name": "staticTestMethod",
    },
    "scope": TypeName {
      "name": "\\\\TestClass",
    },
  },
  ClassConstant {
    "location": Location {
      "range": Range {
        "end": 1120,
        "start": 1098,
      },
      "relativeUri": "case/global_symbols.php",
    },
    "name": TypeName {
      "name": "TEST_CLASS_CONST",
    },
    "scope": TypeName {
      "name": "\\\\TestClass",
    },
  },
]
`;

exports[`completion completion for scoped member references 4`] = `
Array [
  ClassConstant {
    "location": Location {
      "range": Range {
        "end": 1120,
        "start": 1098,
      },
      "relativeUri": "case/global_symbols.php",
    },
    "name": TypeName {
      "name": "TEST_CLASS_CONST",
    },
    "scope": TypeName {
      "name": "\\\\TestClass",
    },
  },
]
`;
